--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 
 <head>
 	<title>Garrett's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<!--<link rel="stylesheet" type="text/css" href="styles/normalize.css">-->
+	<!--<link rel="stylesheet" type="text/css" href="styles/styles.css">-->
+	<link rel="stylesheet" type="text/css" href="/bundle.css">	
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-    <script src="/bundle.js"></script>
+    <script src="/bundle.js?v=2"></script>
 </body>
 
 </html>
