--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Garrett's Portfolio</title>
 	<!--<link rel="stylesheet" type="text/css" href="styles/normalize.css">-->
 	<!--<link rel="stylesheet" type="text/css" href="styles/styles.css">-->
-	<link rel="stylesheet" type="text/css" href="/bundle.css">	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="/bundle.css?v=1">	
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <script src="/bundle.js?v=2"></script>
+    <script src="/bundle.js?v=4"></script>
 </body>
 
 </html>
